finished chocolate pizza

--- a/index.html
+++ b/index.html
@@ -88,24 +88,11 @@
       <img src="images/share.png" alt="share button" class="share-button">
     </div>
 
-    <footer>
       <div class="footer-content">
-
-      <svg height="50" width= 40%>
-      <g fill="none">
-        <path stroke="grey" d="M5 40 l215 0"/>
-      </g>
-    </svg>
-      <img src="images/small-logo.png" alt="" class="forkKnife">
-      <svg height="50" width= 40%>
-      <g fill="none">
-        <path stroke="grey" d="M5 40 l215 0"/>
-      </g>
-    </svg>
-
-  </div>
-    </footer>
-
+        <img src="images/small-logo-2.png" alt="" class="forkKnife">
+        <p>Delicious &copy; 2013 - All Rights Reserved.</p>
+        <p>Proudly published with Ghost.</p>
+      </div>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
